client/src/components/Flash.css
.flashWrap {
  user-select: text;
  position: absolute;
  z-index: 99;
  width: 100%;

  display: flex;
  flex-direction: column;
  align-items: center;
}

.flash {
  display: flex;
  width: 80%;
  align-items: center;
  padding: 0 26px;
  border-radius: 3px;
  margin-top: 7px;

  color: black;
  background-color: #00ffdd;
  opacity: 0.5;
  min-height: 42px;
}

.flash p {
  padding-right: 7px;
}

.flash svg:hover {
  color: white;
}

.flash svg:last-of-type {
  margin-left: auto;
}

